melhorando tela de buscar feiras

--- a/app-feira-livre/feiras_livres/core/templates/core/feira_detalhes.html
+++ b/app-feira-livre/feiras_livres/core/templates/core/feira_detalhes.html
@@ -42,7 +42,7 @@
   <!-- Voltar para a lista de feiras -->
   <div class="row mt-4">
     <div class="col-12">
-      <a href="/" class="btn btn-secondary">Voltar para a lista de feiras</a>
+      <a href="{% url 'usuarios:dashboard' %}" class="btn btn-secondary">Voltar para a lista de feiras</a>
     </div>
   </div>
 
